[package]
name = "unkdir_api"
version = "0.1.0"
authors = ["garyemerson <gmohammadioun@gmail.com>"]
edition = '2018'

[dependencies]
postgres = { version = "0.15", features = ["with-chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.24", features = ["derive"] }
serde_json = "1.0.41"
image = "0.22.2"
