[package]
name = "unkdir_api"
version = "0.1.0"
authors = ["garyemerson <gmohammadioun@gmail.com>"]
edition = '2018'

[dependencies]
rand = "0.8.5"
file-lock = "2.0.2"
postgres-types = "0.2.1"
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
chrono = { version = "0.4.6" }
json = "0.12.4"
