[package]
name = "unkdir_api"
version = "0.1.0"
authors = ["garyemerson <gmohammadioun@gmail.com>"]
edition = '2018'

[dependencies]
base64 = "0.13.0"
verify_sqlite_schema = { git = "file:///root/workspaces/verify_sqlite_schema", rev = "5968f4e3127e8a11f1ddd6019a1b1ba7b760245a" }
# rusqlite = "0.23.1"
rusqlite = "0.27.0"
humantime = "2.1.0"
rand = "0.8.5"
file-lock = "2.0.2"
postgres-types = "0.2.1"
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
chrono = { version = "0.4.6" }
json = "0.12.4"
